Fixed animated transparency mask -> paint layer conversion.

Before, converting an animated transparency mask to a paint layer
would discard everything but the active frame. Now, each of the
animation keyframes is converted correctly.

BUG:419223